# moxfield-cli

./: .gitignore  Cargo.toml  LICENSE
src/: lib.rs
src/scryfall/: client.rs  mod.rs
src/scryfall/schema/: bulk_data.rs  card.rs  lists.rs  mod.rs  set.rs
src/scryfall/schema/card/: card_face.rs  colors.rs  finishes.rs  frame.rs  games.rs  image_status.rs  languages.rs  layout.rs  legalities.rs  rarity.rs  related_card.rs  security_stamp.rs
src/terminal/: app.rs  event_loop.rs  mod.rs  state.rs
src/terminal/app/: state.rs
src/terminal/app/view/: home.rs  mod.rs
src/terminal/app/widget/: fps.rs
src/terminal/state/: progress_bar_manager.rs  scryfall_cache.rs
src/terminal/view/: home.rs  mod.rs
src/terminal/widget/: fps.rs  main_menu.rs  mod.rs  progress_bar.rs
src/terminal/widget/progress_bar/: scryfall_pull.rs
src/utils/: array_to_bitflags.rs  deserialize_matches.rs  mod.rs  ring_buffer.rs
