[package]
name = "moxfield-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moxfield-cli"
path = "bin/moxfield-cli.rs"

[[bin]]
name = "refresh-data"
path = "bin/refresh-data.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
enumflags2 = { version = "0.7.12", features = ["serde"] } 
env_logger = "0.11.10"
governor = { version = "0.10.4", features = ["std"] }
indicatif = { version = "0.18.4", features = ["tokio"] }
indicatif-log-bridge = "0.2.3"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
futures-io = { version = "0.2.0-beta" }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.0", features = ["serde"] }
futures = "0.3.32"
