[package]
name = "moxfield-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "refresh-data"
path = "bin/refresh-data.rs"

[[bin]]
name = "main"
path = "bin/main.rs"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
enumflags2 = { version = "0.7.12", features = ["serde"] }
governor = { version = "0.10.4", features = ["std"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
# futures-io = { version = "0.2.0-beta" }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.0", features = ["serde"] }
futures = "0.3.32"
directories = "6.0.0"
ratatui = { version = "0.30.0", features = ["all-widgets"] }
log = "0.4.29"
crossterm = { version = "0.29.0", features = ["event-stream"] }
color-eyre = "0.6.5"
tokio-util = { version = "0.7.18", features = ["full"] }
